monitoring/loki/templates/namespace.yml
#@ load("@ytt:data", "data")
#@ load("@ytt:overlay", "overlay")
#@ load("_ytt.lib.yml", "labels")

---
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  labels: #@ labels()

#@overlay/match by=overlay.all, expects="1+"
---
#@overlay/match missing_ok=True
metadata:
  #@overlay/match missing_ok=True
  namespace: loki
