monitoring/loki/templates/network_policy.yml
#@ load("@ytt:data", "data")
#@ load("@ytt:overlay", "overlay")
#@ load("_ytt.lib.yml", "labels")

#@ if data.values.monitoring.enable_network_policy:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: promtail
  namespace: loki
  labels: #@ labels()
spec:
  podSelector:
    matchLabels:
      release: promtail
      application: promtail
  ingress:
  - from: #! allow access for prometheus
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 3101

#@overlay/match by=overlay.subset({"kind": "NetworkPolicy", "metadata":{"name":"loki"}}), expects=1
---
spec:
  #@overlay/replace, expects=1
  ingress:
  - from: #! allow access for promtail
    - podSelector:
        matchLabels:
          release: promtail
          application: promtail
    ports:
    - port: 3100
  - from: #! allow access for prometheus
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 3100
  - from: #! allow access for grafana
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: grafana
      podSelector: {}
    ports:
    - port: 3100
#@ end
